118: Tweak scrollbar, fix nightmode tables

--- a/scss/v2/archmage-v2.scss
+++ b/scss/v2/archmage-v2.scss
@@ -47,9 +47,4 @@
   }
 }
 
-:root {
-  scrollbar-width: thin;
-  scrollbar-color: #777 transparent;
-}
-
 @import 'theme/nightmode';
